@@ -8,7 +8,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclScan.c,v 1.14 2004/05/27 13:18:53 dkf Exp $
+ * RCS: @(#) $Id: tclScan.c,v 1.15 2004/08/19 20:59:00 dkf Exp $
  */
 
 #include "tclInt.h"
@@ -367,9 +367,7 @@ ValidateFormat(interp, format, numVars, totalSubs)
 	switch (ch) {
 	case 'l':
 	case 'L':
-#ifndef TCL_WIDE_INT_IS_LONG
 	    flags |= SCAN_LONGER;
-#endif
 	case 'h':
 	    format += Tcl_UtfToUniChar(format, &ch);
 	}
@@ -700,9 +698,7 @@ Tcl_ScanObjCmd(dummy, interp, objc, objv)
 	switch (ch) {
 	case 'l':
 	case 'L':
-#ifndef TCL_WIDE_INT_IS_LONG
 	    flags |= SCAN_LONGER;
-#endif
 	    /*
 	     * Fall through so we skip to the next character.
 	     */
@@ -1036,12 +1032,11 @@ Tcl_ScanObjCmd(dummy, interp, objc, objv)
 			if ((flags & SCAN_UNSIGNED) && (value < 0)) {
 			    sprintf(buf, "%lu", value); /* INTL: ISO digit */
 			    objPtr = Tcl_NewStringObj(buf, -1);
+			} else if ((flags & SCAN_LONGER)
+				|| (unsigned long) value > UINT_MAX) {
+			    objPtr = Tcl_NewLongObj(value);
 			} else {
-			    if ((unsigned long) value > UINT_MAX) {
-				objPtr = Tcl_NewLongObj(value);
-			    } else {
-				objPtr = Tcl_NewIntObj(value);
-			    }
+			    objPtr = Tcl_NewIntObj(value);
 			}
 #ifndef TCL_WIDE_INT_IS_LONG
 		    }
